tests/fsharp/typecheck/sigs/neg03.bsl

neg03.fs(7,20,7,70): typecheck error FS0763: The field 'field3' has been given a value, but is not present in the type 'myRecord1'

neg03.fs(8,20,8,70): typecheck error FS0763: The field 'field1' has been given a value, but is not present in the type 'myRecord2'

neg03.fs(9,20,9,54): typecheck error FS0764: No assignment given for field 'field2' of type 'Neg03.myRecord1'

neg03.fs(10,20,10,56): typecheck error FS0764: No assignment given for field 'field1' of type 'Neg03.myRecord1'

neg03.fs(11,20,11,54): typecheck error FS0764: No assignment given for field 'field2' of type 'Neg03.myRecord2'

neg03.fs(14,5,14,8): typecheck error FS0025: Incomplete pattern matches on this expression. For example, the value '[_;_]' may indicate a case not covered by the pattern(s).

neg03.fs(16,8,16,11): typecheck error FS0025: Incomplete pattern matches on this expression. For example, the value '[_;_]' may indicate a case not covered by the pattern(s).

neg03.fs(22,39,22,47): typecheck error FS0026: This rule will never be matched

neg03.fs(25,9,25,13): typecheck error FS0001: The type 'bool' does not support the operator '<<<'

neg03.fs(26,9,26,13): typecheck error FS0001: This expression was expected to have type
    'int'    
but here has type
    'bool'    

neg03.fs(27,15,27,19): typecheck error FS0001: This expression was expected to have type
    'int'    
but here has type
    'bool'    

neg03.fs(28,15,28,19): typecheck error FS0001: This expression was expected to have type
    'int32'    
but here has type
    'bool'    

neg03.fs(40,31,40,36): typecheck error FS0193: Type constraint mismatch. The type 
    'Map<string,int>'    
is not compatible with type
    'Map<string,string>'    


neg03.fs(45,20,45,26): typecheck error FS0685: The generic function 'typeof' must be given explicit type argument(s)

neg03.fs(46,20,46,26): typecheck error FS0685: The generic function 'sizeof' must be given explicit type argument(s)

neg03.fs(52,15,52,17): typecheck error FS0064: This construct causes code to be less generic than indicated by the type annotations. The type variable 'a has been constrained to be type 'int'.

neg03.fs(53,15,53,17): typecheck error FS0001: Type mismatch. Expecting a
    'string list ref'    
but given a
    'int list ref'    
The type 'string' does not match the type 'int'

neg03.fs(59,9,59,10): typecheck error FS0025: Incomplete pattern matches on this expression. For example, the value '0' may indicate a case not covered by the pattern(s).

neg03.fs(61,9,61,16): typecheck error FS0025: Incomplete pattern matches on this expression. For example, the value '0' may indicate a case not covered by the pattern(s).

neg03.fs(62,9,62,16): typecheck error FS0025: Incomplete pattern matches on this expression. For example, the value '0' may indicate a case not covered by the pattern(s).

neg03.fs(64,9,64,14): typecheck error FS0025: Incomplete pattern matches on this expression. For example, the value '(_,0)' may indicate a case not covered by the pattern(s).

neg03.fs(66,9,66,18): typecheck error FS0025: Incomplete pattern matches on this expression. For example, the value 'Some (0)' may indicate a case not covered by the pattern(s).

neg03.fs(68,9,68,17): typecheck error FS0025: Incomplete pattern matches on this expression. For example, the value 'None' may indicate a case not covered by the pattern(s).

neg03.fs(70,9,70,22): typecheck error FS0025: Incomplete pattern matches on this expression. For example, the value 'Some (_)' may indicate a case not covered by the pattern(s).

neg03.fs(71,9,71,32): typecheck error FS0025: Incomplete pattern matches on this expression. For example, the value 'Some (0)' may indicate a case not covered by the pattern(s).

neg03.fs(72,9,72,28): typecheck error FS0025: Incomplete pattern matches on this expression. For example, the value 'Some (0)' may indicate a case not covered by the pattern(s).

neg03.fs(73,9,73,28): typecheck error FS0025: Incomplete pattern matches on this expression. For example, the value 'Some (0)' may indicate a case not covered by the pattern(s).

neg03.fs(74,9,74,24): typecheck error FS0025: Incomplete pattern matches on this expression. For example, the value '(_,0)' may indicate a case not covered by the pattern(s).

neg03.fs(76,9,76,14): typecheck error FS0025: Incomplete pattern matches on this expression. For example, the value '[|_|]' may indicate a case not covered by the pattern(s).

neg03.fs(77,9,77,18): typecheck error FS0025: Incomplete pattern matches on this expression. For example, the value '[|_; _; _|]' may indicate a case not covered by the pattern(s).

neg03.fs(78,9,78,18): typecheck error FS0025: Incomplete pattern matches on this expression. For example, the value '[|_; 0|]' may indicate a case not covered by the pattern(s).

neg03.fs(79,9,79,16): typecheck error FS0025: Incomplete pattern matches on this expression. For example, the value '[|0|]' may indicate a case not covered by the pattern(s).

neg03.fs(81,9,81,12): typecheck error FS0025: Incomplete pattern matches on this expression. For example, the value '"a"' may indicate a case not covered by the pattern(s).

neg03.fs(83,9,83,21): typecheck error FS0025: Incomplete pattern matches on this expression. For example, the value '"a"' may indicate a case not covered by the pattern(s).

neg03.fs(84,9,84,23): typecheck error FS0025: Incomplete pattern matches on this expression. For example, the value '"a"' may indicate a case not covered by the pattern(s).

neg03.fs(85,9,85,27): typecheck error FS0025: Incomplete pattern matches on this expression. For example, the value '"a"' may indicate a case not covered by the pattern(s).

neg03.fs(86,9,86,13): typecheck error FS0025: Incomplete pattern matches on this expression. For example, the value '``some-non-null-value``' may indicate a case not covered by the pattern(s).

neg03.fs(87,19,87,26): typecheck error FS0025: Incomplete pattern matches on this expression. For example, the value '``some-other-subtype``' may indicate a case not covered by the pattern(s).

neg03.fs(91,11,91,26): typecheck error FS0026: This rule will never be matched

neg03.fs(97,11,97,26): typecheck error FS0026: This rule will never be matched

neg03.fs(100,9,100,12): typecheck error FS0025: Incomplete pattern matches on this expression. For example, the value '[_]' may indicate a case not covered by the pattern(s).

neg03.fs(101,9,101,16): typecheck error FS0025: Incomplete pattern matches on this expression. For example, the value '[_;_;_]' may indicate a case not covered by the pattern(s).

neg03.fs(102,9,102,16): typecheck error FS0025: Incomplete pattern matches on this expression. For example, the value '[_;_;_]' may indicate a case not covered by the pattern(s).

neg03.fs(103,9,103,14): typecheck error FS0025: Incomplete pattern matches on this expression. For example, the value '[_;_]' may indicate a case not covered by the pattern(s).

neg03.fs(106,15,106,17): typecheck error FS0025: Incomplete pattern matches on this expression. For example, the value '[0]' may indicate a case not covered by the pattern(s).

neg03.fs(148,23,148,26): typecheck error FS0003: This value is not a function and cannot be applied.

neg03.fs(151,9,151,23): typecheck error FS0002: This function takes too many arguments, or is used in a context where a function is not expected

neg03.fs(154,9,154,10): typecheck error FS0001: This expression was expected to have type
    'int -> int'    
but here has type
    'int'    
